# KD-AR-Stream

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
kd_ar_stream/: __init__.py  core.py  utils.py
kd_ar_stream.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kd_ar_stream/data/: ExclaStar.txt
mcmststream/: __init__.py  core.py  utils.py
mcmststream.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_core.py
